# SSG_Obligatorio2_Mazzini_Marotta_Kicelian

./: README.md
tarea_rag/tarea_rag/: pyproject.toml
tarea_rag/tarea_rag/src/tarea_rag/: config.py  data_loader.py  prompts.py  query_processor.py  rag_api.py  vectorstore.py
tarea_rag/tarea_rag/src/tarea_rag/data/: Clientes-Tabla 1.csv  Productos-Tabla 1.csv  Ventas-Tabla 1.csv
tarea_rag/tarea_rag/src/tarea_rag/static/: index.html  script.js  styles.css
